<resources>
    <string name="app_name">OB Wallet Mainnet</string>
    <string name="pwd">Password</string>
    <string name="pwd_upper">PASSWORD</string>
    <string name="pwd_upper_repeat">REPEAT PASSWORD</string>
    <string name="unlock">Unlock</string>
    <string name="txt_forget_pwd">If you forget your password,click"</string>
    <string name="txt_need_help">If you need help,click</string>
    <string name="here">Here</string>
    <string name="unlock_description">Set a password to encrypt your wallet!</string>
    <string name="unlock_uppre">UNLOCK</string>
    <string name="create_uppre">NEW WALLET</string>
    <string name="recover_uppre">RECOVER</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="forget_pwd">Forget Password</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="unlock_without_password">Unlock without Password</string>
    <string name="reset_password_unlock">Reset Password &#038; Unlock</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="verify_seed">Verify Seed</string>
    <string name="reset_password">Reset Password</string>
    <string name="forget_description">Please enter the seed (24 words) to restore your wallet!</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="recover_your_wallet">Recover Your Wallet</string>
    <string name="important_alert">Your seed is important!</string>
    <string name="create_step_two_description">If you lose your seed you\'ll have no way to recover your wallet. To make sure that you have properly saved your seed, please retype words:  </string>
    <string name="create_seed_input_hit">————</string>
    <string name="create_pass_input_hit">----------------</string>
    <string name="pass_show_hind">pass show or hind</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="create_step_one_notify_one">Please save these 24 words private and securely!</string>
    <string name="create_step_one_desc_one">1.This will allow you to recover your wallet.</string>
    <string name="create_step_one_desc_two">2.If someone gains access to this list they can steal your money.</string>
    <string name="txt_create_wallet_one">Please save these 24 words securely! This will allow you to recover your wallet.</string>
    <string name="txt_create_wallet_two">Keep this private! If someone gains access to this list they can steal your money.</string>
    <string name="txt_create_wallet_three">Your seed is important! If you lose your seed you will have no way to recover your wallet. To make sure that you have properly saved your seed, please retype words 01,10, 23 &#038; 12</string>
    <string name="txt_create_wallet_four">Set a password to encrypt your wallet. This password will be needed to unlock the wallet in the future.</string>
    <string name="txt_create_wallet_five">Please make sure that your password just use Lower  letter, Upper letter or number.</string>
    <string name="txt_create_wallet_six">Please make sure your confirm password is the same as your password.</string>
    <string name="txt_create_wallet_seven">This is for your convenience only and will not be broadcasted on the Lightning Network.</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="save_seed">Save Seed</string>
    <string name="retype_seed">Retype Seed</string>
    <string name="set_password">Set Password</string>
    <string name="set_name">Set Name</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="strong">STRONG</string>
    <string name="empty">EMPTY</string>
    <string name="choose_backup_type">Choose Backup Type</string>
    <string name="local">Local</string>
    <string name="google_drive">Google Drive</string>
    <string name="drop_box">Drop Box</string>
    <string name="recover_wallet">Recover Wallet</string>
    <string name="paste">Paste</string>
    <string name="import_seed">Import Seed</string>
    <string name="txt_recover_wallet_one">Recovering a wallet, nice. You do not need anyone else, you got yourself :)</string>
    <string name="welcome">Welcome!</string>
    <string name="deposit_your_wallet">Deposit your wallet</string>
    <string name="copy_address">Copy Address</string>
    <string name="menu">MENU</string>
    <string name="wallet_manage">Wallet Manage</string>
    <string name="channel_manage">Channel Manage</string>
    <string name="profile">Profile</string>
    <string name="preference">Preference</string>
    <string name="node_info">Node Info</string>
    <string name="backup_directory">Backup Now</string>
    <string name="disconnect">Disconnect</string>
    <string name="lock">Lock</string>
    <string name="settings">SETTINGS</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="currency">Currency</string>
    <string name="usd">USD</string>
    <string name="close">CLOSE</string>
    <string name="fund_your_wallet">FUND YOUR WALLET</string>
    <string name="copy_address_big">COPY ADDRESS</string>
    <string name="share_to">SHARE TO</string>
    <string name="open_a_channel">OPEN A CHANNEL</string>
    <string name="open_a_channel_txt">Establish a channel with a liquidity node and start using the Lightning Network</string>
    <string name="scan_qrcode">Scan QRCode</string>
    <string name="fill_in_mannually">Fill in manually</string>
    <string name="valid_pubkey">Valid Pubkey</string>
    <string name="back_big">BACK</string>
    <string name="create">CREATE</string>
    <string name="amount">Amount</string>
    <string name="fee">Fee</string>
    <string name="slow">SLOW</string>
    <string name="unit_per_byte">unit per byte</string>
    <string name="satoshi_per_byte">satoshi per byte</string>
    <string name="pay_invoice">PAY INVOICE</string>
    <string name="fill_invoice">Fill invoice</string>
    <string name="check_pay">Check &#038; Pay</string>
    <string name="from_node">From Node</string>
    <string name="to_node">To Node</string>
    <string name="pay_invoice_txt">Please input the invoice you will pay</string>
    <string name="omnibolt_11">OmniBOLT 7 Invoice</string>
    <string name="next_big">NEXT</string>
    <string name="pay">PAY</string>
    <string name="cancel">CANCEL</string>
    <string name="assets">ASSETS</string>
    <string name="asset">ASSET</string>
    <string name="amount_big">AMOUNT</string>
    <string name="value">VALUE</string>
    <string name="network">NETWORK</string>
    <string name="channels">CHANNELS</string>
    <string name="channels_space">C H A N N E L S</string>
    <string name="remote_pubkey">Remote Pubkey</string>
    <string name="local_balance">Local Balance</string>
    <string name="send">SEND</string>
    <string name="txt_send_one">search, public address(1m)</string>
    <string name="txt_send_two">Transfer between my accounts</string>
    <string name="recents">Recents</string>
    <string name="asset_one">Asset</string>
    <string name="estimated">Estimated</string>
    <string name="gas_fee">Gas fee</string>
    <string name="likely_in">Likely in &#060;</string>
    <string name="seconds">seconds</string>
    <string name="balance_one">Balance</string>
    <string name="total">Total</string>
    <string name="confirm">CONFIRM</string>
    <string name="network_small">Network</string>
    <string name="pay_invoice_small">Pay Invoice</string>
    <string name="create_invoice_small">Create Invoice</string>
    <string name="channel_activities">Channel Activities</string>
    <string name="to_be_paid">To be send</string>
    <string name="send_small">Send</string>
    <string name="create_invoice">CREATE INVOICE</string>
    <string name="my_node_id">My node ID</string>
    <string name="hours">Hours</string>
    <string name="expiration">Expiration</string>
    <string name="timestamp">timestamp</string>
    <string name="omnibolt_11_invoice">OMNIBOLT 7 INVOICE</string>
    <string name="failed">Failed</string>
    <string name="invoice_created">Invoice Created</string>
    <string name="lightning">lightning</string>
    <string name="mainnet">mainnet</string>
    <string name="omnilayer_mainnet">Omnilayer Mainnet</string>
    <string name="testnet">Testnet</string>
    <string name="regtest">Regtest</string>
    <string name="error_code">Error Code: </string>
    <string name="try_again">TRY AGAIN</string>
    <string name="channel_detail">CHANNEL DETAIL</string>
    <string name="remote">Remote</string>
    <string name="pubkey">Pubkey</string>
    <string name="capacity">Capacity</string>
    <string name="remote_balance">Remote Balance</string>
    <string name="funding_transaction">Funding Transaction</string>
    <string name="number_of_updates">Number of Updates</string>
    <string name="time_lock">Time Lock</string>
    <string name="activity">Activity</string>
    <string name="total_sent">Total Sent</string>
    <string name="total_received">Total Received</string>
    <string name="close_channel">CLOSE CHANNEL</string>
    <string name="transactions">TRANSACTIONS</string>
    <string name="io">I / O</string>
    <string name="date">DATE</string>
    <string name="status">STATUS</string>
    <string name="sent">SENT</string>
    <string name="failed_big">FAILED</string>
    <string name="received">RECEIVED</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="connect_node">CONNECT NODE</string>
    <string name="domain">Domain</string>
    <string name="ip">IP</string>
    <string name="timestamp_big">Timestamp</string>
    <string name="explorer">EXPLORER</string>
    <string name="status_first_upper">Status</string>
    <string name="nonce">Nonce</string>
    <string name="txid">Tx ID</string>
    <string name="pending_invoices">PENDING INVOICES</string>
    <string name="receiver">RECEIVER</string>
    <string name="delete">DELETE</string>
    <string name="no">NO</string>
    <string name="activities">ACTIVITIES</string>
    <string name="can_send">Can Send</string>
    <string name="can_receive">Can Receive</string>
    <string name="medium">MEDIUM</string>
    <string name="fast">FAST</string>
    <string name="minutes">Minutes</string>
    <string name="day">Days</string>
    <string name="my_invoices">My Invoices</string>
    <string name="sender">MEMO</string>
    <string name="pending_txs">Pending Txs</string>
    <string name="channel_no_alias">Unnamed</string>
    <string name="channel_state_open">open</string>
    <string name="channel_state_offline">offline</string>
    <string name="channel_state_pending_closing">pending close</string>
    <string name="channel_state_pending_force_closing">pending force close</string>
    <string name="channel_state_pending_open">pending open</string>
    <string name="channel_state_waiting_close">waiting close</string>
    <string name="channel_close_success">Channel closing successfully initiated</string>
    <string name="error_channel_close_offline">Peer is offline. Only force close allowed.</string>
    <string name="error_channel_close_timeout">Channel could not be closed within deadline.</string>
    <string name="error_channel_close">Could not close channel</string>
    <string name="wallet_address_is_invalid">The wallet address is invalid</string>
    <string name="create_invoice_amount">Please enter the amount</string>
    <string name="sync_block">Syncing Chain Data:</string>
    <string name="sync_block_percent">0%</string>
    <string name="block">Block</string>
    <string name="block_synced_num">0</string>
    <string name="block_sync_num">0</string>
    <string name="block_of">of</string>
</resources>