<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_black_rectangle_round_0"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_10"
        android:gravity="center"
        android:text="@string/minutes"
        android:textColor="@color/color_99_transparent"
        android:textSize="@dimen/text_16"/>

    <TextView
        android:id="@+id/tv_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_10"
        android:gravity="center"
        android:text="@string/hours"
        android:textColor="@color/color_99_transparent"
        android:textSize="@dimen/text_16"/>

    <TextView
        android:id="@+id/tv_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_10"
        android:layout_marginTop="@dimen/main_10"
        android:gravity="center"
        android:text="@string/day"
        android:textColor="@color/color_99_transparent"
        android:textSize="@dimen/text_16"/>
</LinearLayout>